--- a/module/motion/KinematicsConfiguration/data/config/igus1/KinematicsConfiguration.yaml
+++ b/module/motion/KinematicsConfiguration/data/config/igus1/KinematicsConfiguration.yaml
@@ -19,8 +19,8 @@ head:
         base_position_from_origin: [-0.007, 0, 0.21] # [x, y, z]
     # head movement limits
     limits: # pitch limit is a function of yaw ... need to calculate this properly
-        yaw: [-pi * 2 / 3, pi * 2 / 3] # [min_yaw, max_yaw]
-        pitch: [-pi / 6, pi / 2] # [min_pitch, max_pitch]
+        yaw: [0, 0] # [min_yaw, max_yaw]
+        pitch: [pi/6, pi/6] # [min_pitch, max_pitch]
 # rough measurements
 arm:
     distance_between_shoulders: 0.17 # distance between shoulders
