--- a/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
+++ b/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
@@ -1,15 +1,15 @@
 leg:
     # darwin says this is [0.008, 0.008, 0.034]
-    hip_offset: [0.00, 0.037, 0.034] # [x, y, z]
-    upper_leg_length: 0.093
-    lower_leg_length: 0.093
-    heel_length: 0.0451 # measured
-    foot_centre_to_ankle_centre: 0.011 # rough
+    hip_offset: [0.00, 0.055, 0.045] # [x, y, z]
+    upper_leg_length: 0.2
+    lower_leg_length: 0.2
+    heel_length: 0.085 # measured
+    foot_centre_to_ankle_centre: 0.02 # rough
     foot:
-        width: 0.066 # rough
-        height: 0.0335
-        length: 0.094 # rough
-        toe_length: 0.0472 # measured
+        width: 0.130 # rough
+        height: 0.04
+        length: 0.215 # rough
+        toe_length: 0.13 # measured
     left_to_right:
         hip_yaw:    -1
         hip_roll:   -1
@@ -18,29 +18,29 @@ leg:
         ankle_pitch: 1
         ankle_roll: -1
 head:
-    camera_declination_angle_offset: -0.0 # TODO - fix 1's head pitch motor offset
-    neck_to_camera: [0.036, 0, 0.028] # [x, y, z]
-    ipd: 0.0 # Interpupillary distance - y axis
-    neck:
-        length: 0.042
-        base_position_from_origin: [0.013, 0, 0.11] # [x, y, z]
+    camera_declination_angle_offset: pi / 90.0 # 2 degrees
+    neck_to_camera: [0.069, 0, 0.065] # [x, y, z]
+    ipd: 0.068 # Interpupillary distance - y axis
+    neck: # not yet calculated
+        length: 0.048
+        base_position_from_origin: [-0.007, 0, 0.21] # [x, y, z]
     # head movement limits
-    limits:
-        yaw: [-pi * 2 / 3, pi * 2 / 3] # [min_yaw, max_yaw]
-        pitch: [-pi / 6, pi / 2] # [min_pitch, max_pitch]
+    limits: # pitch limit is a function of yaw ... need to calculate this properly
+        yaw: [0, 0] # [min_yaw, max_yaw]
+        pitch: [pi/6, pi/6] # [min_pitch, max_pitch]
 # rough measurements
 arm:
-    distance_between_shoulders: 0.114 # distance between shoulders
+    distance_between_shoulders: 0.17 # distance between shoulders
     shoulder:
         length: 0.0
-        width: 0.0245
-        height: 0.017
-        offset: [0.01, 0.088] # [x, z]
+        width: 0.04
+        height: 0.010
+        offset: [0.0, 0.1905] # [x, z]
     upper_arm:
-        length: 0.0615
-        offset: [0, 0.02] # [y, z] very rough
+        length: 0.16
+        offset: [0, 0.03] # [y, x] very rough
     lower_arm:
-        length: 0.13
+        length: 0.235
         offset: [0, 0] # [y, z] very rough
 mass_model:
     number_of_masses: 21
@@ -68,4 +68,4 @@ mass_model:
         - [-0.035,                     0,           0.01,      0.11708]     # 19 - HEAD_PITCH
         - [-0.0066631,        -0.00311589,      0.0705563,      0.975599]   # 20 - TORSO
 
-team_darwin_chest_to_origin: 0.096 # - leg.hip_offset[2] # taken from team darwin OPkinematics.cpp - hipOffsetZ = .096;
+team_darwin_chest_to_origin: 0.18 # - leg.hip_offset[2] # rough
