--- a/module/support/VirtualCamera/data/config/VirtualCamera.yaml
+++ b/module/support/VirtualCamera/data/config/VirtualCamera.yaml
@@ -1,11 +1,11 @@
 lens_type: radial
 
 lens:
-  radiansPerPixel: 0.01
+  radiansPerPixel: 0.0026768
   centreOffset: [0,0]
 
-imageWidth: 320
-imageHeight: 240
+imageWidth: 1280
+imageHeight: 1024
 FOV_X: 3.14
 FOV_Y: 3.14
 DISTORTION_FACTOR: -0.0000
