--- a/module/behaviour/planning/KickPlanner/data/config/KickPlanner.yaml
+++ b/module/behaviour/planning/KickPlanner/data/config/KickPlanner.yaml
@@ -1,5 +1,6 @@
 
 max_ball_distance: 0.30
+max_goal_distance: 2.00
 kick_corridor_width: 0.1
 kick_forward_angle_limit: 2.0
 seconds_not_seen_limit: 3
