Updates config params

--- a/module/vision/BallDetector/data/config/BallDetector.yaml
+++ b/module/vision/BallDetector/data/config/BallDetector.yaml
@@ -18,7 +18,7 @@ ball_screen_covariance: [0.1, 0.01, 0.01]
 
 print_throwout_logs: false
 print_mesh_debug: false
-draw_cluster: false
+draw_cluster: true
 
 ball_angular_cov: [0.1,0.01,0.01]
 
