Renames hip pitch translation value

--- a/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
+++ b/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
@@ -1,6 +1,6 @@
 leg:
     hip_offset: [0.00, 0.055, 0.055] # [x, y, z]  distance from torso origin to yaw/roll intersection
-    hip_pitch_offset: 0.0248  # distance from yaw/roll intersection to pitch joint axis
+    hip_pitch_translation: 0.0248  # distance from yaw/roll intersection to pitch joint axis
     upper_leg_length: 0.2 # distance from hip pitch axis to knee axis
     lower_leg_length: 0.2 # distance from knee axis to ankle pitch axis
     foot:
