--- a/module/debug/KinematicsDebug/data/config/InverseKinematicsRequest.yaml
+++ b/module/debug/KinematicsDebug/data/config/InverseKinematicsRequest.yaml
@@ -1,10 +1,8 @@
-{
-    "xAngle": 0.0,
-    "yAngle": 0.7,
-    "zAngle": -0.7,
-    "x": 0.0,
-    "y": 0.1,
-    "z": 0.1,
-    "left": true,
-    "right": true
-}
+xAngle: 0.0
+yAngle: 0.7
+zAngle: -0.7
+x: 0.0
+y: 0.1
+z: 0.1
+left: true
+right: true
