Upgrade to Webpack 4 and TypeScript 2.9.2 (NUbots/NUsight2#192)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noImplicitReturns": false,
     "removeComments": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "downlevelIteration": true,
     "outDir": "build",
     "lib": [
