--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@types/classnames": "^2.2.0",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.35",
-    "@types/copy-webpack-plugin": "^4.0.0",
+    "@types/copy-webpack-plugin": "^4.4.1",
     "@types/express": "^4.11.0",
-    "@types/extract-text-webpack-plugin": "3.0.2",
+    "@types/extract-text-webpack-plugin": "3.0.3",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/jest": "^22.0.1",
     "@types/minimist": "^1.2.0",
@@ -56,18 +56,18 @@
     "@types/socket.io": "^1.4.29",
     "@types/socket.io-client": "^1.4.29",
     "@types/three": "^0.91.0",
-    "@types/webpack": "^3.8.2",
-    "@types/webpack-dev-middleware": "^2.0.0",
+    "@types/webpack": "^4.4.9",
+    "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.15.0",
-    "awesome-typescript-loader": "^3.2.1",
+    "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.8",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^3.0.4",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "22.4.2",
@@ -90,12 +90,13 @@
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.9.2",
     "url-loader": "0.6.2",
-    "webpack": "^3.4.0",
-    "webpack-dev-middleware": "^2.0.3",
-    "webpack-dev-server": "^2.6.1",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.1"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
