Add Webpack HMR (NUbots/NUsight2#195)

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "plugins": ["transform-react-jsx"]
+  "plugins": [
+    "@babel/plugin-syntax-typescript",
+    [
+      "@babel/plugin-syntax-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-syntax-jsx",
+    "react-hot-loader/babel"
+  ]
 }
