--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "prepush": "yarn tslint"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-decorators": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-jsx": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-typescript": "^7.0.0-rc.1",
     "@types/classnames": "^2.2.0",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.35",
@@ -49,6 +53,7 @@
     "@types/react": "^16.0.34",
     "@types/react-color": "^2.13.3",
     "@types/react-dom": "^16.0.2",
+    "@types/react-hot-loader": "^4.1.0",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.0.8",
     "@types/seedrandom": "^2.4.27",
@@ -60,14 +65,13 @@
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.15.0",
     "awesome-typescript-loader": "^5.2.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^8.0.0-beta",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "^3.0.4",
+    "html-webpack-plugin": "^4.0.0-alpha",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "22.4.2",
@@ -81,7 +85,7 @@
     "postcss-reporter": "5.0.0",
     "postcss-url": "^7.3.1",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "3.1.3",
+    "react-hot-loader": "4.3.4",
     "react-svg-loader": "2.1.0",
     "rimraf": "^2.6.1",
     "seedrandom": "^2.4.3",
@@ -99,7 +103,6 @@
     "webpack-hot-middleware": "^2.21.1"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
     "binary": "^0.3.0",
     "binary-search-bounds": "^2.0.4",
     "bindings": "^1.3.0",
