Adds integral for determining time

--- a/module/motion/walk/FootStep/data/config/FootStep.yaml
+++ b/module/motion/walk/FootStep/data/config/FootStep.yaml
@@ -2,3 +2,8 @@ step_height: 0.1
 # well_width must be an even number
 well_width: 0.02
 step_steep: 2
+foot: 0
+test:
+  x: 0.05
+  y: -0.04
+  z: 0
