Working NSGA2 with script optimisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ IF(STATIC_LIBRARIES)
         ${CMAKE_SHARED_LIBRARY_SUFFIX})
 ENDIF()
 
+# Set flag so NUClear uses a custom clock implementation
+# See utility::clock::CustomClock
+#ADD_COMPILE_OPTIONS(-DNUCLEAR_CUSTOM_CLOCK)
+
 # We use additional modules that cmake needs to know about
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")
 
