--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "start:debug": "nodemon --inspect ./src/server/dev.ts",
     "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
     "virtual-robots": "nodemon ./src/virtual_robots/run.ts",
-    "prod": "ts-node ./src/server/prod.ts",
-    "prod:virtual": "ts-node ./src/server/prod.ts --virtual-robots",
+    "prod": "TS_NODE_FILES=true ts-node ./src/server/prod.ts",
+    "prod:virtual": "TS_NODE_FILES=true ts-node ./src/server/prod.ts --virtual-robots",
     "build": "yarn clean:dist && webpack -p --progress --colors",
     "clean": "yarn clean:dist && yarn clean:coverage",
     "clean:dist": "rimraf dist",
@@ -35,10 +35,10 @@
     "prepush": "yarn tslint"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.2",
-    "@babel/plugin-syntax-decorators": "^7.0.0-rc.2",
-    "@babel/plugin-syntax-jsx": "^7.0.0-rc.2",
-    "@babel/plugin-syntax-typescript": "^7.0.0-rc.2",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-syntax-decorators": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-syntax-typescript": "^7.0.0",
     "@types/classnames": "^2.2.6",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.36",
@@ -46,16 +46,16 @@
     "@types/express": "^4.16.0",
     "@types/extract-text-webpack-plugin": "3.0.3",
     "@types/html-webpack-plugin": "^3.2.0",
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^23.3.2",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^10.9.1",
+    "@types/node": "^10.10.0",
     "@types/pixi.js": "^4.8.0",
-    "@types/react": "^16.0.34",
+    "@types/react": "^16.4.14",
     "@types/react-color": "^2.13.6",
-    "@types/react-dom": "^16.0.2",
+    "@types/react-dom": "^16.0.7",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-router": "^4.0.30",
-    "@types/react-router-dom": "^4.3.0",
+    "@types/react-router": "^4.0.31",
+    "@types/react-router-dom": "^4.3.1",
     "@types/seedrandom": "^2.4.27",
     "@types/serve-favicon": "^2.2.28",
     "@types/socket.io": "^1.4.38",
@@ -64,8 +64,8 @@
     "@types/webpack": "^4.4.11",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.16.4",
-    "awesome-typescript-loader": "^5.2.0",
-    "babel-loader": "^8.0.0-beta",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -74,9 +74,9 @@
     "html-webpack-plugin": "^4.0.0-alpha",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "23.5.0",
+    "jest": "23.6.0",
     "jest-css-modules": "^1.1.0",
-    "nodemon": "^1.14.7",
+    "nodemon": "^1.18.4",
     "postcss": "^7.0.2",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "3.1.0",
@@ -85,22 +85,22 @@
     "postcss-reporter": "6.0.0",
     "postcss-url": "^8.0.0",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "4.3.5",
+    "react-hot-loader": "4.3.8",
     "react-svg-loader": "2.1.0",
     "rimraf": "^2.6.1",
     "seedrandom": "^2.4.4",
-    "style-loader": "0.22.1",
+    "style-loader": "0.23.0",
     "ts-jest": "23.1.4",
-    "ts-node": "^4.1.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.0.3",
     "url-loader": "1.1.1",
-    "webpack": "^4.17.1",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.2.0",
-    "webpack-dev-server": "^3.1.0",
-    "webpack-hot-middleware": "^2.21.1"
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-hot-middleware": "^2.24.0"
   },
   "dependencies": {
     "binary": "^0.3.0",
@@ -113,23 +113,26 @@
     "express": "^4.16.3",
     "long": "^4.0.0",
     "minimist": "^1.2.0",
-    "mobx": "^4.1.0",
-    "mobx-react": "^5.0.0",
-    "mobx-utils": "^4.0.0",
-    "nuclearnet.js": "^1.5.2",
-    "pixi.js": "^4.8.1",
+    "mobx": "^5.1.1",
+    "mobx-react": "^5.2.8",
+    "mobx-utils": "^5.0.2",
+    "nuclearnet.js": "^1.5.3",
+    "pixi.js": "^4.8.2",
     "protobufjs": "^6.8.8",
-    "react": "^16.2.0",
+    "react": "^16.5.1",
     "react-color": "^2.14.1",
-    "react-dom": "^16.0.0",
-    "react-resize-detector": "^3.1.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-dom": "^16.5.1",
+    "react-resize-detector": "^3.1.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "three": "^0.91.0",
     "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.2"
+  },
+  "resolutions": {
+    "@types/react": "16.4.14"
   }
 }
