Improve build (NUbots/NUsight2#200)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ cache:
     # We have to be careful with this cache, note that below we check
     # if the lock file has changed and if so we purge this folder
     - node_modules
+    - .awcache
 
 # We need to set this so our compiler is g++-4.9 for NUClearNet.js
 env:
-  - CXX=g++-4.9 YARN_COMMAND=build
+  - CXX=g++-4.9 YARN_COMMAND=build:ci
   - CXX=g++-4.9 YARN_COMMAND=tslint
   - CXX=g++-4.9 YARN_COMMAND=test:ci
   - CXX=g++-4.9 YARN_COMMAND=protobuf
