Add cross-env for correct env variables on Windows (NUbots/NUsight2#209)

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "start:debug": "nodemon --inspect ./src/server/dev.ts",
     "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
     "virtual-robots": "nodemon ./src/virtual_robots/run.ts",
-    "prod": "TS_NODE_FILES=true ts-node ./src/server/prod.ts",
-    "prod:virtual": "TS_NODE_FILES=true ts-node ./src/server/prod.ts --virtual-robots",
+    "prod": "cross-env TS_NODE_FILES=true ts-node ./src/server/prod.ts",
+    "prod:virtual": "cross-env TS_NODE_FILES=true ts-node ./src/server/prod.ts --virtual-robots",
     "build": "yarn clean:dist && webpack -p --progress --colors",
     "build:ci": "yarn clean:dist && webpack --ci --progress --colors",
     "clean": "yarn clean:dist && yarn clean:coverage",
@@ -68,6 +68,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "2.0.0",
