--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "prepush": "yarn tslint"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-syntax-decorators": "^7.1.0",
-    "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@babel/plugin-syntax-typescript": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-syntax-typescript": "^7.2.0",
     "@types/classnames": "^2.2.6",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.36",
@@ -47,84 +47,84 @@
     "@types/express": "^4.16.0",
     "@types/extract-text-webpack-plugin": "3.0.3",
     "@types/html-webpack-plugin": "^3.2.0",
-    "@types/jest": "^23.3.3",
+    "@types/jest": "^23.3.10",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^10.11.4",
-    "@types/pixi.js": "^4.8.1",
-    "@types/react": "^16.4.15",
-    "@types/react-color": "^2.13.6",
-    "@types/react-dom": "^16.0.8",
+    "@types/node": "^10.12.18",
+    "@types/pixi.js": "^4.8.6",
+    "@types/react": "16.7.18",
+    "@types/react-color": "^2.14.0",
+    "@types/react-dom": "^16.0.11",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-router": "^4.0.31",
+    "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/seedrandom": "^2.4.27",
     "@types/serve-favicon": "^2.2.28",
     "@types/socket.io": "^1.4.38",
     "@types/socket.io-client": "^1.4.29",
     "@types/three": "^0.91.0",
-    "@types/webpack": "^4.4.14",
+    "@types/webpack": "^4.4.22",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.16.4",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^2.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "2.0.0",
+    "file-loader": "3.0.1",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "husky": "^0.14.3",
+    "html-webpack-plugin": "4.0.0-alpha",
+    "husky": "^1.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "23.6.0",
     "jest-css-modules": "^1.1.0",
-    "nodemon": "^1.18.4",
-    "postcss": "^7.0.5",
+    "nodemon": "^1.18.9",
+    "postcss": "^7.0.7",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "3.1.0",
-    "postcss-import": "12.0.0",
+    "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-reporter": "6.0.0",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^0.5.1",
-    "react-hot-loader": "4.3.11",
+    "raw-loader": "^1.0.0",
+    "react-hot-loader": "4.6.3",
     "react-svg-loader": "2.1.0",
     "rimraf": "^2.6.1",
     "seedrandom": "^2.4.4",
-    "style-loader": "0.23.0",
-    "ts-jest": "23.10.3",
+    "style-loader": "0.23.1",
+    "ts-jest": "23.10.5",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.1.1",
-    "url-loader": "1.1.1",
-    "webpack": "^4.20.2",
+    "typescript": "^3.2.2",
+    "url-loader": "1.1.2",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-hot-middleware": "^2.24.2"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
     "binary": "^0.3.0",
     "binary-search-bounds": "^2.0.4",
-    "bindings": "^1.3.0",
+    "bindings": "^1.3.1",
     "classnames": "^2.2.6",
     "component-emitter": "^1.2.1",
     "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "long": "^4.0.0",
     "minimist": "^1.2.0",
-    "mobx": "^5.5.0",
-    "mobx-react": "^5.2.8",
-    "mobx-utils": "^5.0.2",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "mobx-utils": "^5.1.0",
     "nuclearnet.js": "^1.5.3",
-    "pixi.js": "^4.8.2",
+    "pixi.js": "^4.8.4",
     "protobufjs": "^6.8.8",
-    "react": "^16.5.2",
-    "react-color": "^2.14.1",
-    "react-dom": "^16.5.2",
-    "react-resize-detector": "^3.1.3",
+    "react": "^16.7.0",
+    "react-color": "^2.17.0",
+    "react-dom": "^16.7.0",
+    "react-resize-detector": "^3.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.5.0",
@@ -133,8 +133,5 @@
     "three": "^0.91.0",
     "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.2"
-  },
-  "resolutions": {
-    "@types/react": "16.4.14"
   }
 }
