--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "yarn protobuf",
     "dev": "yarn start:virtual",
     "dev:debug": "nodemon --inspect ./src/server/dev.ts --virtual-robots",
+    "storybook": "start-storybook -p 9001 -c conf/storybook",
     "start": "nodemon ./src/server/dev.ts",
     "start:debug": "nodemon --inspect ./src/server/dev.ts",
     "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
@@ -40,6 +41,8 @@
     "@babel/plugin-syntax-decorators": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-syntax-typescript": "^7.2.0",
+    "@storybook/addon-actions": "^4.1.4",
+    "@storybook/react": "^4.1.3",
     "@types/classnames": "^2.2.6",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.36",
@@ -61,6 +64,8 @@
     "@types/serve-favicon": "^2.2.28",
     "@types/socket.io": "^1.4.38",
     "@types/socket.io-client": "^1.4.29",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__react": "^4.0.0",
     "@types/three": "^0.91.0",
     "@types/webpack": "^4.4.22",
     "@types/webpack-dev-middleware": "^2.0.2",
