--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "repository": "github:NUbots/NUsight2",
   "engines": {
-    "node": ">=4.X.X"
+    "node": ">=4.X.X",
+    "yarn": "1.x"
   },
   "scripts": {
     "test": "jest",
@@ -21,7 +22,9 @@
     "postinstall": "yarn protobuf",
     "dev": "yarn start:virtual",
     "dev:debug": "nodemon --inspect ./src/server/dev.ts --virtual-robots",
-    "storybook": "start-storybook -p 9001 -c conf/storybook",
+    "storybook": "node ./conf/storybook/dev.js",
+    "storybook:build": "node ./conf/storybook/build_storybook.js",
+    "storybook:prod": "node ./conf/storybook/prod.js",
     "start": "nodemon ./src/server/dev.ts",
     "start:debug": "nodemon --inspect ./src/server/dev.ts",
     "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
@@ -33,7 +36,7 @@
     "clean": "yarn clean:dist && yarn clean:coverage",
     "clean:dist": "rimraf dist",
     "clean:coverage": "rimraf coverage",
-    "heroku-postbuild": "yarn build",
+    "heroku-postbuild": "yarn build && yarn storybook:build",
     "prepush": "yarn tslint"
   },
   "devDependencies": {
@@ -46,6 +49,7 @@
     "@types/classnames": "^2.2.6",
     "@types/component-emitter": "^1.2.7",
     "@types/compression": "0.0.36",
+    "@types/connect-history-api-fallback": "^1.3.1",
     "@types/copy-webpack-plugin": "^4.4.2",
     "@types/express": "^4.16.0",
     "@types/extract-text-webpack-plugin": "3.0.3",
