--- a/module/motion/walk/TorsoMovement/data/config/TorsoMovement.yaml
+++ b/module/motion/walk/TorsoMovement/data/config/TorsoMovement.yaml
@@ -1,7 +1,7 @@
-# test:
-#   x: 0
-#   y: 0
-#   z: 0.25
-# time: 1
-# foot: 0
+test:
+  x: 0
+  y: 0
+  z: 0.25
+time: 1
+foot: 0
 time_horizon: 0.1
