--- a/module/motion/walk/StaticWalk/data/config/StaticWalk.yaml
+++ b/module/motion/walk/StaticWalk/data/config/StaticWalk.yaml
@@ -1,7 +1,12 @@
+# time each phase takes to finish (seconds)
 phase_time: 1
+# Height of the torso from the ground when standing (m)
+torso_height: 0.23
+# Distance between the feet (m)
+feet_distance: 0.07
+# Width between the feet wile walking (m)
+stance_width: 0.1
+# values for walkcommand (test)
 x_speed: 0.02
 y_speed: 0
 angle: 0
-torso_height: 0.23
-feet_distance: 0.06
-stance_width: 0.1
