--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
     "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "~3.6.0",
     "typescript": "^3.2.2",
     "url-loader": "1.1.2",
     "webpack": "^4.28.2",
@@ -114,6 +115,7 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "@types/react-outside-click-handler": "^1.2.0",
     "binary": "^0.3.0",
     "binary-search-bounds": "^2.0.4",
     "bindings": "^1.3.1",
@@ -133,6 +135,7 @@
     "react": "^16.7.0",
     "react-color": "^2.17.0",
     "react-dom": "^16.7.0",
+    "react-outside-click-handler": "^1.2.2",
     "react-resize-detector": "^3.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
