--- a/module/motion/walk/MovementController/data/config/MovementController.yaml
+++ b/module/motion/walk/MovementController/data/config/MovementController.yaml
@@ -1,7 +1,13 @@
+# Height that the robot lifts its foot to step
 step_height: 0.03
-# well_width must be an even number
-well_width: 0.02
+# How steep the foot comes down to its target
 step_steep: 2
+# Size of the well near the target
+# Well_width must be an even number
+well_width: 0.004
+# Gain for the feet movements
+gain: 10
+# How far in the future we are sending the movements (seconds)
 time_horizon: 0.2
 # Make the step complete slightly earlier to make sure it is at the target on time (milliseconds)
-offset_time: 200
+offset_time: 0
