--- a/module/motion/ScriptEngine/data/scripts/igus/NodYes.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/NodYes.yaml
@@ -1,40 +1,52 @@
-- duration: 500
-  targets:
-    - id: HEAD_YAW
-      position: 0
-      gain: 30
+- id: HEAD_YAW
+  frames:
+    - time: 500
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-    - id: HEAD_PITCH
-      position: 0
-      gain: 30
+    - time: 650
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-- duration: 150
-  targets:
-    - id: HEAD_YAW
-      position: 0
-      gain: 30
+    - time: 900
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-    - id: HEAD_PITCH
-      position: -0.3
-      gain: 30
+    - time: 1200
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-- duration: 250
-  targets:
-    - id: HEAD_YAW
-      position: 0
-      gain: 30
+- id: HEAD_PITCH
+  frames:
+    - time: 500
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-    - id: HEAD_PITCH
-      position: 0
-      gain: 30
+    - time: 650
+      angle: -0.3
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-- duration: 300
-  targets:
-    - id: HEAD_YAW
-      position: 0
-      gain: 30
+    - time: 900
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
-    - id: HEAD_PITCH
-      position: 0
-      gain: 30
+    - time: 1200
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
