--- a/module/motion/ScriptEngine/data/scripts/igus/Relax.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/Relax.yaml
@@ -1,27 +1,160 @@
-[
-    {
-        "duration": 25,
-        "targets": [
-            { "id": "R_SHOULDER_PITCH", "position": 0.7, "gain": .NaN, "torque": 0 },
-            { "id": "L_SHOULDER_PITCH", "position": 0.7, "gain": .NaN, "torque": 0  },
-            { "id": "R_SHOULDER_ROLL", "position": 0.7, "gain": .NaN, "torque": 0  },
-            { "id": "L_SHOULDER_ROLL", "position": 0.7, "gain": .NaN, "torque": 0  },
-            { "id": "R_ELBOW", "position": -1.5, "gain": .NaN, "torque": 0  },
-            { "id": "L_ELBOW", "position": -1.5, "gain": .NaN, "torque": 0  },
-            { "id": "R_HIP_YAW", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_HIP_YAW", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "R_HIP_PITCH", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_HIP_PITCH", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "R_KNEE", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_KNEE", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "R_ANKLE_PITCH", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_ANKLE_PITCH", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "R_HIP_ROLL", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_HIP_ROLL", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "HEAD_YAW", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "HEAD_PITCH", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "R_ANKLE_ROLL", "position": 0, "gain": .NaN, "torque": 0  },
-            { "id": "L_ANKLE_ROLL", "position": 0, "gain": .NaN, "torque": 0  }
-        ]
-    }
-]
+- id: R_SHOULDER_PITCH
+  frames:
+    - time: 25
+      angle: 0.7
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_SHOULDER_PITCH
+  frames:
+    - time: 25
+      angle: 0.7
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_SHOULDER_ROLL
+  frames:
+    - time: 25
+      angle: 0.7
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_SHOULDER_ROLL
+  frames:
+    - time: 25
+      angle: 0.7
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ELBOW
+  frames:
+    - time: 25
+      angle: -1.5
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ELBOW
+  frames:
+    - time: 25
+      angle: -1.5
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_YAW
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_YAW
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_PITCH
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_PITCH
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_KNEE
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_KNEE
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ANKLE_PITCH
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ANKLE_PITCH
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_ROLL
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_ROLL
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: HEAD_YAW
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: HEAD_PITCH
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ANKLE_ROLL
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ANKLE_ROLL
+  frames:
+    - time: 25
+      angle: 0
+      pGain: 0
+      iGain: 0
+      dGain: 0
+      torque: 0
