--- a/module/motion/ScriptEngine/data/scripts/igus/StandUpFront.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/StandUpFront.yaml
@@ -1,410 +1,640 @@
-- duration: 2500
-  targets:
-    - id: L_ELBOW
-      position: -2.45
-      gain: 20
-      torque: 100
-    - id: R_HIP_PITCH
-      position: 0.06
-      gain: 20
-      torque: 100
-    - id: L_HIP_PITCH
-      position: 0.06
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 0.45
-      gain: 20
-      torque: 100
-    - id: R_HIP_ROLL
-      position: -0.02
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: -0.12
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_ELBOW
-      position: -2.45
-      gain: 20
-      torque: 100
-    - id: R_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: HEAD_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_KNEE
-      position: 0.45
-      gain: 20
-      torque: 100
-    - id: HEAD_PITCH
-      position: -0.2073009
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: 0.02
-      gain: 20
-      torque: 100
-    - id: L_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: 0.08304699
-      gain: 30
-      torque: 100
-    - id: R_SHOULDER_PITCH
-      position: 2.757045
-      gain: 30
-      torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 2.830694
-      gain: 30
-      torque: 100
-- duration: 300
-  targets:
-    - id: L_ELBOW
-      position: -2.45
-      gain: 20
-      torque: 100
-    - id: R_HIP_PITCH
-      position: 0.06
-      gain: 20
-      torque: 100
-    - id: L_HIP_PITCH
-      position: 0.06
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 0.2
-      gain: 20
-      torque: 100
-    - id: R_HIP_ROLL
-      position: -0.02
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_PITCH
-      position: 2.720796
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: 0.12
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: -0.12
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_ELBOW
-      position: -2.45
-      gain: 20
-      torque: 100
-    - id: R_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: HEAD_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_KNEE
-      position: 0.2
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 2.720796
-      gain: 20
-      torque: 100
-    - id: HEAD_PITCH
-      position: -0.2073009
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: 0.02
-      gain: 20
-      torque: 100
-    - id: L_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-- duration: 700
-  targets:
-    - id: R_HIP_PITCH
-      position: -2
-      gain: 20
-      torque: 100
-    - id: L_HIP_PITCH
-      position: -2
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: R_HIP_ROLL
-      position: -0.02
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_PITCH
-      position: 0.8907963
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: -0.04
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: 0.04
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: HEAD_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 0.8907963
-      gain: 20
-      torque: 100
-    - id: HEAD_PITCH
-      position: -0.2073009
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: 0.02
-      gain: 20
-      torque: 100
-    - id: L_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_ELBOW
-      position: -1.815
-      gain: 30
-      torque: 100
-    - id: L_ELBOW
-      position: -1.815142
-      gain: 30
-      torque: 100
-- duration: 700
-  targets:
-    - id: R_HIP_PITCH
-      position: -2
-      gain: 20
-      torque: 100
-    - id: L_HIP_PITCH
-      position: -2
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: R_HIP_ROLL
-      position: -0.02
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_PITCH
-      position: 0.8907963
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: -0.04
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: -1.54
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: 0.04
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: HEAD_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 0.8907963
-      gain: 20
-      torque: 100
-    - id: HEAD_PITCH
-      position: -0.2073009
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: 0.02
-      gain: 20
-      torque: 100
-    - id: L_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_ELBOW
-      position: -0.8745826
-      gain: 30
-      torque: 100
-    - id: L_ELBOW
-      position: -0.7825212
-      gain: 30
-      torque: 100
-- duration: 900
-  targets:
-    - id: R_HIP_PITCH
-      position: -1.4
-      gain: 20
-      torque: 100
-    - id: L_HIP_PITCH
-      position: -1.4
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: R_HIP_ROLL
-      position: -0.02
-      gain: 20
-      torque: 100
-    - id: R_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_ROLL
-      position: 0
-      gain: 20
-      torque: 100
-    - id: R_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: HEAD_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_KNEE
-      position: 2.6
-      gain: 20
-      torque: 100
-    - id: HEAD_PITCH
-      position: 0.04269908
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: 0.02
-      gain: 20
-      torque: 100
-    - id: L_HIP_YAW
-      position: 0
-      gain: 20
-      torque: 100
-    - id: L_ANKLE_PITCH
-      position: -1.262774
-      gain: 30
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: -1.264309
-      gain: 30
-      torque: 100
-    - id: L_ELBOW
-      position: -0.2347564
-      gain: 30
-      torque: 100
-    - id: R_ELBOW
-      position: -0.2439625
-      gain: 30
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: 0.1271597
-      gain: 30
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: -0.1992744
-      gain: 30
-      torque: 100
-    - id: R_SHOULDER_PITCH
-      position: 1.188934
-      gain: 30
-      torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 1.313216
-      gain: 30
+- id: L_ELBOW
+  frames:
+    - time: 2500
+      angle: -2.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -2.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -1.815142
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -0.7825212
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -0.2347564
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_HIP_PITCH
+  frames:
+    - time: 2500
+      angle: 0.06
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.06
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -1.4
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_HIP_PITCH
+  frames:
+    - time: 2500
+      angle: 0.06
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.06
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -1.4
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_KNEE
+  frames:
+    - time: 2500
+      angle: 0.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_HIP_ROLL
+  frames:
+    - time: 2500
+      angle: -0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_ANKLE_PITCH
+  frames:
+    - time: 2500
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -1.262774
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_ANKLE_PITCH
+  frames:
+    - time: 2500
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -1.54
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -1.264309
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_SHOULDER_ROLL
+  frames:
+    - time: 2500
+      angle: -0.12
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -0.12
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0.04
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0.04
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0.1271597
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_ANKLE_ROLL
+  frames:
+    - time: 2500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_ANKLE_ROLL
+  frames:
+    - time: 2500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_ELBOW
+  frames:
+    - time: 2500
+      angle: -2.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -2.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -1.815
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -0.8745826
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -0.2439625
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_HIP_YAW
+  frames:
+    - time: 2500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: HEAD_YAW
+  frames:
+    - time: 2500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_KNEE
+  frames:
+    - time: 2500
+      angle: 0.45
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.2
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 2.6
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: HEAD_PITCH
+  frames:
+    - time: 2500
+      angle: -0.2073009
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: -0.2073009
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -0.2073009
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -0.2073009
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0.04269908
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_HIP_ROLL
+  frames:
+    - time: 2500
+      angle: 0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0.02
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_HIP_YAW
+  frames:
+    - time: 2500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 0
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_SHOULDER_ROLL
+  frames:
+    - time: 2500
+      angle: 0.08304699
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 0.12
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: -0.04
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: -0.04
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: -0.1992744
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: R_SHOULDER_PITCH
+  frames:
+    - time: 2500
+      angle: 2.757045
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 2.720796
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0.8907963
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0.8907963
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 1.188934
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+- id: L_SHOULDER_PITCH
+  frames:
+    - time: 2500
+      angle: 2.830694
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 2800
+      angle: 2.720796
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 3500
+      angle: 0.8907963
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 4200
+      angle: 0.8907963
+      pGain: 20
+      iGain: 0
+      dGain: 0
+      torque: 100
+    - time: 5100
+      angle: 1.313216
+      pGain: 30
+      iGain: 0
+      dGain: 0
       torque: 100
