--- a/module/motion/ScriptEngine/data/scripts/igus/Zombie.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/Zombie.yaml
@@ -1,62 +1,160 @@
-- targets:
-    - id: R_SHOULDER_PITCH
-      position: 0
-      gain: 30
-    - gain: 30
-      position: 0
-      id: L_SHOULDER_PITCH
-    - id: R_SHOULDER_ROLL
-      gain: 30
-      position: 0
-    - position: 0
-      id: L_SHOULDER_ROLL
-      gain: 30
-    - position: 0
-      gain: 30
-      id: R_ELBOW
-    - position: 0
-      id: L_ELBOW
-      gain: 30
-    - id: R_HIP_YAW
-      gain: 30
-      position: 0
-    - gain: 30
-      position: 0
-      id: L_HIP_YAW
-    - position: 0
-      gain: 30
-      id: R_HIP_ROLL
-    - position: 0
-      id: L_HIP_ROLL
-      gain: 30
-    - gain: 30
-      id: R_HIP_PITCH
-      position: 0
-    - id: L_HIP_PITCH
-      gain: 30
-      position: 0
-    - id: R_KNEE
-      gain: 30
-      position: 0
-    - id: L_KNEE
-      gain: 30
-      position: 0
-    - gain: 30
-      position: 0
-      id: R_ANKLE_PITCH
-    - id: L_ANKLE_PITCH
-      position: 0
-      gain: 30
-    - gain: 30
-      position: 0
-      id: R_ANKLE_ROLL
-    - id: L_ANKLE_ROLL
-      gain: 30
-      position: 0
-    - id: HEAD_PITCH
-      gain: 30
-      position: 0
-    - id: HEAD_YAW
-      position: 0
-      gain: 30
-  duration: 1000
+- id: R_SHOULDER_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_SHOULDER_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_SHOULDER_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_SHOULDER_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ELBOW
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ELBOW
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_YAW
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_YAW
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_HIP_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_HIP_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_KNEE
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_KNEE
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ANKLE_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ANKLE_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: R_ANKLE_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: L_ANKLE_ROLL
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: HEAD_PITCH
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
+- id: HEAD_YAW
+  frames:
+    - time: 1000
+      angle: 0
+      pGain: 30
+      iGain: 0
+      dGain: 0
+      torque: 0
