Updates mass model

--- a/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
+++ b/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
@@ -43,29 +43,18 @@ arm:
         length: 0.235
         offset: [0, 0] # [y, z] very rough
 mass_model:
-    number_of_masses: 21
-    mass_representation_dimension: 4
-    masses:
-        - [-0.011264,         0.0109774,      -0.00139357,    0.025913]     # 0  - R_SHOULDER_PITCH
-        - [-0.011264,         -0.0109774,     -0.00139357,    0.025913]     # 1  - L_SHOULDER_PITCH
-        - [-0.025261,         -0.000659787,   0.000734065,    0.168377]     # 2  - R_SHOULDER_ROLL
-        - [-0.025261,         0.000659787,    0.000734065,    0.168377]     # 3  - L_SHOULDER_ROLL
-        - [-0.0841618,        -0.00666564,    -0.0134901,     0.0592885]    # 4  - R_ELBOW
-        - [-0.0841618,        0.00666564,     -0.0134901,     0.0592885]    # 5  - L_ELBOW
-        - [-0.0155628,        0,              0.000480135,    0.0270692]    # 6  - R_HIP_YAW
-        - [-0.0155628,        0,              0.000480135,    0.0270692]    # 7  - L_HIP_YAW
-        - [0.0138731,         -7.99828e-005,  -0.0182424,     0.167108]     # 8  - R_HIP_ROLL
-        - [0.0138731,         7.99828e-005,   -0.0182424,     0.167108]     # 9  - L_HIP_ROLL
-        - [-0.0300345,        0.000322635,    0.000691906,    0.119043]     # 10 - R_HIP_PITCH
-        - [-0.0300345,        -0.000322635,   0.000691906,    0.119043]     # 11 - L_HIP_PITCH
-        - [-0.0539545,        0.000592469,    0.00654763,     0.0703098]    # 12 - R_KNEE
-        - [-0.0539545,        -0.000592469,   0.00654763,     0.0703098]    # 13 - L_KNEE
-        - [-0.0138731,        0.000213732,    -0.0185361,     0.167108]     # 14 - R_ANKLE_PITCH
-        - [-0.0138731,        -0.000213732,   -0.0185361,     0.167108]     # 15 - L_ANKLE_PITCH
-        - [0.0259953,         -0.00950588,    -0.000502877,   0.0794462]    # 16 - R_ANKLE_ROLL
-        - [0.0259953,         0.00950588,     -0.000502877,   0.0794462]    # 17 - L_ANKLE_ROLL
-        - [-0.0165676,        0.00142428,     0.000712811,    0.0243577]    # 18 - HEAD_YAW
-        - [-0.035,                     0,           0.01,      0.11708]     # 19 - HEAD_PITCH
-        - [-0.0066631,        -0.00311589,      0.0705563,      0.975599]   # 20 - TORSO
+    # Particles CoM is in particle space
+    # CoM_x, CoM_y, CoM_z, mass
+    # SI units
+    particles:
+      head: [-5.85412735e-02, -2.62990669e-04,  1.23178230e-03,  3.78000000e-01]
+      arm_upper: [-0.00047546,  0.00048306, -0.04785146, 0.297]
+      arm_lower: [ 0.05336545, -0.00081563,  0.00060633, 0.26]
+      torso: [-1.21951525e-03, -1.11546415e-04,  9.92024735e-02,  2.13100000e+00]
+      hip_block: [ 0.0157329,  -0.00054217,  0.00126175, 0.306]
+      leg_upper: [-8.68239853e-02,  2.30710331e-04, -3.22365659e-03,  3.87000000e-01]
+      leg_lower: [-0.10000941, -0.00128492, -0.00707286, 0.177]
+      ankle_block: [-0.0157329,   0.00051261, -0.02197621, 0.306]
+      foot: [0.03315616, 0.0080263,  0.01307823, 0.223]
 
 team_darwin_chest_to_origin: 0.18 # - leg.hip_offset[2] # rough
