Updates NUC and NUSense weight

--- a/doc/Kinematics/COM.yaml
+++ b/doc/Kinematics/COM.yaml
@@ -31,7 +31,7 @@ torso:
   - [-60.2985, 0.0423568, 54.5506, 0.033]         # Back panel bottom
   - [-63.3556, -0.0168232, 120.23, 0.020]         # Back panel top
   - [-52.9994, 0.00066415, 174.46, 0.027]         # Handle
-  - [-9.01472, -4.9927, 111.833, 0.034]           # Shelf
+  - [-9.01472, -4.9927, 111.833, 0.440]           # Shelf + NUC + NUSense
   - [10, 6.07514e-12, 173.33, 0.013]              # Servo support
   - [7.19083, 7.94224e-06, 185.613, 0.135]        # Head yaw servo
   - [-6.03734, -1.59984, 241.159, 0.135]          # Head pitch servo
